# climate-data-pipeline

./: README.md  main.py  pyproject.toml
src/cli/: cli.py
src/data_logging/: logging_config.py
