[tool.poetry]
name = "climate-data-pipeline"
version = "1.0.0"
description = ""
authors = ["mrico98 <manuelrico98@outlook.es>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
